--- a/管理学/管理学-第一章.mm.md
+++ b/管理学/管理学-第一章.mm.md
@@ -1,5 +1,5 @@
 # <font color = '#7acacb'>第一章</font> 管理导论
-### My Great Heading 
+### My Great Heading [^1]
 ## 第一节 管理的内涵与本质
 - 组织的概念
     - <font color = '#7acacb'>动词</font> 
@@ -98,3 +98,4 @@
 <style>
 h1,h2,h3 { color: #999 !important; }
 </style>
+[^1]: 脚注
