--- a/管理学/管理学-第一章.mm.md
+++ b/管理学/管理学-第一章.mm.md
@@ -1,4 +1,4 @@
-# <font color = '#7acacb'>第一章</font> 管理导论
+# <font color = '#7acacb'>[[第一章]]</font> 管理导论
 ### My Great Heading [^1]
 ## 第一节 管理的内涵与本质
 - 组织的概念
