--- a/管理学/管理学-绪论.markdown
+++ b/管理学/管理学-绪论.markdown
@@ -1,6 +1,6 @@
-# 绪论
+# [[绪论]]
 
-## 一、管理学的研究对象
+## [[一、管理学的研究对象]]
 
 - 广义上来说，
   管理学的研究对象既包括个体活动的管理
@@ -15,7 +15,7 @@
     管理活动是一个由<font color = '#7acacb'>决策、组织、领导、控制</font>以及<font color = '#7acacb'>创新</font>
     所构成循环往复、螺旋上升的过程。
 
-## 二、 管理学的产生和发展
+## [[二、 管理学的产生和发展]]
 
 ### (一) 中国古代管理思想
 
@@ -36,19 +36,20 @@
 - 法约尔:'组织理论之父'
 - 梅奥:霍桑实验:行为科学
 
-## <font color = '#7acacb'>三、 管理学的学习意义与方法</font>
+## font color = '#7acacb'>三、[[管理学的学习意义与方法]]</font>
+
 - 意义：
-    - 让我们了解管理的一般规律。
-    -  帮助我们形成理性分析能力。
-    -  提升我们一直觉判断为基础的决策或断绝能力
-    -  知道我们的管理实践，提升管理水瓶
+  - 让我们了解管理的一般规律。
+  - 帮助我们形成理性分析能力。
+  - 提升我们一直觉判断为基础的决策或断绝能力
+  - 知道我们的管理实践，提升管理水瓶
 - 学习和研究管理学的理论指导
-    - 要以马克思主义为基本引导
+  - 要以马克思主义为基本引导
 - 学习和研究管理学的科学思维
-    - 战略思维
-    - 历史思维
-    - 辩证思维
-    - 创新思维
-    - 底线思维
+  - 战略思维
+  - 历史思维
+  - 辩证思维
+  - 创新思维
+  - 底线思维
 - 学习和研究管理学的基本方法
-    - 理论联系到实践
+  - 理论联系到实践
