--- a/管理学/第二章.md
+++ b/管理学/第二章.md
@@ -1,3 +1,9 @@
+---
+title: 第二章 管理理论的历史演变
+date: yyyy-mm-dd
+type: feature
+tags: 古典管理理论, 现代管理流派, tag3
+---
 # **管理理论的历史演变**
 ## [古典管理理论](https://zhuanlan.zhihu.com/p/40506396)
 * 科学管理————泰勒
