--- a/管理学/管理学-第一章.mm.md
+++ b/管理学/管理学-第一章.mm.md
@@ -1,8 +1,4 @@
-<<<<<<< HEAD
-# <font color = '#7acacb'>[[第一章]]</font> 管理导论
-=======
 # <font color = '#7acacb'>第一章</font> 管理导论
->>>>>>> 5ad1f8620c4d8cb1f36203a3e21a18f70d075d9c
 ### My Great Heading [^1]
 ## 第一节 管理的内涵与本质
 - 组织的概念
@@ -100,6 +96,7 @@
     - 市场化是指在开放的市场中，用市场机制而非行政命令方式实现资源配置。市场
     机制主要包括价格机制、供求机制和竞争机制。
 <style>
-h1,h2,h3 { color: #999 !important; }
+h1,h2,h3,p,li { color: #999 !important; }
+body { background-color : #263238 !important;}
 </style>
 [^1]: 脚注
