--- a/管理学/管理学-绪论.markdown
+++ b/管理学/管理学-绪论.markdown
@@ -1,6 +1,12 @@
-# [[绪论]]
+---
+title : 绪论
+tags : 管理学的研究对象,
+       管理学的产生和发展,
+       管理学的学习意义与方法
+---
+# 绪论
 
-## [[一、管理学的研究对象]]
+## 一、管理学的研究对象
 
 - 广义上来说，
   管理学的研究对象既包括个体活动的管理
@@ -15,7 +21,7 @@
     管理活动是一个由<font color = '#7acacb'>决策、组织、领导、控制</font>以及<font color = '#7acacb'>创新</font>
     所构成循环往复、螺旋上升的过程。
 
-## [[二、 管理学的产生和发展]]
+## 二、 管理学的产生和发展
 
 ### (一) 中国古代管理思想
 
@@ -36,7 +42,7 @@
 - 法约尔:'组织理论之父'
 - 梅奥:霍桑实验:行为科学
 
-## font color = '#7acacb'>三、[[管理学的学习意义与方法]]</font>
+## font color = '#7acacb'>三、管理学的学习意义与方法</font>
 
 - 意义：
   - 让我们了解管理的一般规律。
