今天结束了,上号

--- a/线代/线性相关性.md
+++ b/线代/线性相关性.md
@@ -1,14 +1,41 @@
-<!--
-title: 线性相关性
-date : 2022年11月8日
- -->
 # 线性相关性
-##  线性组合
-$$\alpha_1,\alpha_2,\alpha_3,\cdots,\alpha_n,\beta 都是n维向量\\
-\exist k_1,k_2,\cdots,k_n$$
-$$\beta = k_1\alpha_1+ k_2\alpha_2 + k31\alpha_3 \dots  k_n\alpha_n$$
+### 线性组合
+- 定义:
+    - $$\alpha_1,\alpha_2,\alpha_3,\cdots,\alpha_n,\beta 都是n维向量\\
+    \exist k_1,k_2,\cdots,k_n$$
+    - $$\beta = k_1\alpha_1+ k_2\alpha_2 + k31\alpha_3 \dots  k_n\alpha_n$$
 
 - 性质:
   - 零向量可以有任意向量组表示
   - 向量组中任意向量可以由该向量组表示
   - 任意向量都刻由n维基本单位向量组表示
+- 判断k是否存在
+  - 列方程组求解
+  - 用矩阵求解
+- 向量组等价: 两个向量组的向量可以相互表示
+### 线性相关
+- 定义
+  - $$若存在一组\mathbf{不全为零}的 k_1,k_2,\cdots,k_n.   使得:$$
+  - $$\alpha_i = k_1\alpha_1+\cdots+k_{i-1}\alpha_{i-1}+k_{i+1}\alpha_{i+1}+\cdots+k_n\alpha_n$$
+  - $$或 k_1\alpha_1+\cdots+k_{n}\alpha_n = \bf{0}$$
+  - $$则称向量组 \alpha_1,\alpha_2,\cdots,\alpha_n,线性相关$$
+- 结论:
+  - 向量组中两向量成比例 -> 相关
+  - 含零向量必相关 
+  - 一个零向量线性相关
+  - 一个非零向量必线性无关
+  - $$若\alpha_1,\cdots\alpha_r线性相关,则\alpha_1,\cdots\alpha_r,\alpha_r+1,\cdots,\alpha_s线性相关$$
+  - 部分组线性相关等价于整组的也线性相关
+  - 无关向量组,加长向量也无关.相关的,截短之后也相关
+  - n个n维向量构成的行列式,D不等于0则无关,若D=0则线性相关
+    - $$D=\begin{vmatrix}
+      a_1 & \cdots & a_n\\
+      b_1 & \cdots & b_n\\
+      \vdots & & \vdots\\
+      z_1 & \cdots & z_n
+      \end{vmatrix}$$
+  - 例题:
+    - $$已知\alpha,\beta,\gamma线性无关,证明:\alpha+\beta,\beta+\gamma,\alpha+\gamma线性无关$$
+    - $$设k_1(\alpha+\beta)+k_2(\beta+\gamma)+ k_3(\alpha+\gamma)=0$$
+    - $$则(k_1+k_3)\alpha+(k_1+k_2)\beta+(k_2+k_3)\gamma=0$$
+    - $$\therefore \left\{ \begin{aligned}k_1+k_3=0\\k_1+k_2=0\\k_2+k_3=0\end{aligned}\right.\Rightarrow k_1=k_2=k_3=0$$
