--- a/管理学/第二章.md
+++ b/管理学/第二章.md
@@ -1,10 +1,10 @@
 ---
 title: 第二章 管理理论的历史演变
 date: yyyy-mm-dd
-type: feature
-tags: 古典管理理论, 现代管理流派, tag3
+type: important
+tags: 古典管理理论, 现代管理流派
 ---
-# **管理理论的历史演变**
+# <font color = '#7acacb' ><b>管理理论的历史演变</b></font>
 ## [古典管理理论](https://zhuanlan.zhihu.com/p/40506396)
 * 科学管理————泰勒
     - 改进工作方法,并根据工作的要求挑选和培训工人
@@ -22,3 +22,29 @@ tags: 古典管理理论, 现代管理流派, tag3
       - 法律型权力
 ## 现代管理流派
 - 管理思维的研究与权变研究
+  - 管理思维的系统观(美国巴纳德)
+    - 组织是一个协作系统
+    - 协作系统的三个基本要素
+      - 协作的意愿
+      - 共同的目标
+      - 信息的沟通
+    - 管理人员的职能
+      - 建立和维持一个信息系统
+      - 从不同的组织成员那里获得必要的服务
+      - 规定组织的共同目标，并对各个部门的具体目标加以明确
+- 管理本质的决策与协调研究
+  - 管理本质的决策研究(美国西蒙)
+  - 管理本质的协调研究(亨利·明兹伯格)
+    - 组织的协调机制
+      - 相互调试
+      - 直接监督
+      - 标准化
+  - [[组织的基本构成部分]]
+  - 组织的基本形态
+- 管理分析的技术与方法研究
+  - 别名管理的数学学派
+  - 以假设为前提
+<style>
+h1,h2,h3,p,li { color: #999 !important; }
+body { background-color : #263238 !important;}
+</style>
