--- a/管理学/管理学-第一章.mm.md
+++ b/管理学/管理学-第一章.mm.md
@@ -30,7 +30,7 @@
     4. 管理是一个包括<u> <font color = '#7acacb'>多阶段,多项工作</font> </u>的综合过程
 - 管理工作的内容
     ![](https://pic2.zhimg.com/80/v2-72c82966a61dde2576ed2a9e094a21c9_720w.jpg)
-    1. 决策 
+    1. <font color=red>决策</font> 
         - <p style="font-color : red">决策是组织在未来众多的行动中可能选择的一个比较合理的方案</p>
     2. 组织
         - 为了保证决策活动的有效实施
