--- a/管理学/组织环境调查-华为.md
+++ b/管理学/组织环境调查-华为.md
@@ -13,6 +13,44 @@
   - ![Alt text][3]
 ## 一般环境
 - [详情点击链接查看](https://zhuanlan.zhihu.com/p/335223311)(十分详细，可做PPT参考)
+- 概述：
+  - 市场营销环境是存在于企业营销系统外部的不可控制或难以控制的因素和力量，这些因素和力量是影响企业营销活动及其目标实现的外部环境。因此，本文将从宏观营销环境和微观营销环境两个方面，对华为的发展进行简要分析。
+
+  - 华为全称华为技术有限公司，其主要业务包括两个方面，一方面是生产通信设备，另一方面是提供解决方案。华为在发展的过程中经历了多次的失败，为了实现自身的不断发展，华为开始实现自身营销战略的转变，经过不断的艰辛拓展获得了当前阶段性的成功。本文重点对华为的市场营销战略进行了研究与分析，对华为市场营销策略的制定、实施与改善进行了阐述。
+
+  - 华为企业在不断发展的过程中存在某种中国企业特有的管理理论，为了深入地了解华为公司，本文对华为公司目前的发展阶段及市场营销策略进行了分析与探讨，希望能够从华为公司的经验与问题中得出结论，对中国企业的发展提供参考与借鉴。
+- 人口环境
+
+  1. 人口总量：
+    - 目前华为约有19.4万员工，业务遍及170多个国家和地区，服务30多亿人口。
+  2. 年龄结构：
+    - 华为Mate系列和P系列的用户群体主要集中在26-35岁的年龄段中，占比都接近了五成；nova系列更受女性和年轻用户青睐，超过70%的用户年龄在35岁及以下;麦芒系列则仍然男性用户占比较多，而用户年龄正好与nova系列相反，主要45岁以上的用户占比较多，几乎达到了四成;畅享系列作为华为旗下的入门级系列，用户男女比例和年龄分布相对比较均衡；荣耀系列的男性用户相对要偏多一些，占比56.9%.
+
+  3. 地理分布：
+    - ![人口分布][renkou]
+    - 华为Mate系列分布最多的在新一线、二线和三线城市；nova系列、麦芒系列、畅想系列用户比例主要以三四线城市居多；荣耀系列主要在分布在新一线、二线和三线城市。
+  4. 人口性别：
+
+    - 在2019年第三季度华为Mate系列用户男性占比偏高，达到了62%，女性比例为38%，虽然随着近年来，华为在Mate系列机型的外观方面有了诸多突破性的设计，女性用户比例有了不小的提升，但是目前看仍然是男性用户占比较多;反观P系列用户，目前男女用户比例分别为51%和49%，比例均衡。
+- 宏观经济形势
+  - ！[hongguan][hongguan]
+  - 2020年开年，新冠肺炎爆发，全球经济出现停摆。在此期间，华为内部的运营并未停摆。近几年，华为坚持每年将10%以上销售收入投入到研发。欧盟委员会曾表示，华为研发费用以年增长至少16%的速度在提升。这也是华为能够一直超越、并成为全球领先企业的秘诀之一。任正非说，2020年春节2万多名华为员工加班，就因为要赶着开发新技术，而这个新技术将会使得华为在全球竞争中脱颖而出。
+  虽然华为做足了准备，但受疫情和美国制裁的双重影响，任正非坦言华为业务的营收从去年（2019年）10月份已经开始下降，下滑比例达17%，但预估华为业务在今年（2020年）依然能够保持至少10%以内的增速。所以，尽管徐直军表示2020年华为要争取活下来，明年还能发布财报；但任正非已经肯定，2020年华为的生存不是问题，问题是如何保持业内领先地位。不仅如此，任正非还给华为设定了未来五年营收达到3000亿美元（折合人民币约为21267亿元）的目标，这个数字超过了8500亿（2019年）的2.5倍。
+- 通货膨胀与通货紧缩
+- 三、自然环境
+
+  - 1.自然资源
+
+    目前华为已明确了以数字包容、安全可信、绿色环保、和谐生态为主题的可持续发展战略。在绿色环保方面，华为致力于减少生产、运营等过程以及产品和服务全生命周期对环境的影响，通过创新的产品和解决方案促进各行业的节能减排和循环经济发展，持续牵引产业链各方共建低碳社会，具体方式是聚焦ICT产业的端到端绿色产品创新。
+
+  - 2.生态资源
+
+    2019年，华为与雨林保护组织RFCx合作，运用技术手段将监控系统对电锯噪声的检测精度提高到了96％，大大提高了护林员的工作效率。目前这一方案已应用于全球10个国家和地区，保护了超过2500平方公里的雨林，2020年还计划进一步扩展应用于15个国家，用于保护6000平方公里森林。华为还参与建设了东北虎豹国家公园自然资源监测系统，为野生动物监测数据的采集、传输和存储分析提供了一整套解决方案。
+- 科学技术环境
+  <empty/>
+  世界知识产权组织(WPIO)也曾公布了一组数据显示，2019年中国通过专利合作条约(PCT)体系申请了58990件专利，首次超过美国(57840件)，成为世界第一，在中国科学技术快速发展的大背景下，中国5G的发展进步很大，第一是在频率方面，中国是基于中频来发展5G，全球接近90%的营运商都选择了中频这个发展方向。所以，中国在整个5G中频处于非常好的开端。中国在整个5G的建设规模上也是处于领跑地位，到目前为止中国已经建设了19万个基站，预计到全年会达到50万到60万站之间。  
+  <empty/>
+  华为又在5G技术发展迅速需求巨大的环境中，占据着5G技术的优势地位，研究公司Iplytics的报告也显示，华为是目前全球拥有5G专利数量最多的公司，共有3147项5G专利，这是华为在5G通信设备市场中占有大量份额的重要原因。市场调研机构Dell'Oro给出的统计报告显示，2020年第一季度，在5G通信设备市场中，华为以35.7%的市场份额排名第一。5G新技术的应用为华为创造了5G通信设备这个明星产品，产生了巨大的经济效益。
 - ……
 
 ## 特殊环境
@@ -34,23 +72,40 @@
         - 鸿蒙是横跨手机、电脑、电视、穿戴设备、车联网终端、物联网等各个生态一体化的操作系统，代表着未来操作系统的发展方向。
       - 成电路领域：
         - **Intel**、**三星**、台积电、海力士[^haishili]、镁光、博通、**高通**、德州仪器、东芝、英飞凌、**英伟达**、恩惠浦、意法半导体
+      - 概述：
+        - 就国内市场而言，华为的竞争者上至苹果三星，下至小米魅族一加，同定位还有OPPO、VIVO大厂。华为单是手机业务的战线就拉的很开，几乎所有手机市场的细分都占了一块地。P、mate系列主要是与三星、苹果的旗舰竞争，NOVA主要是和OPPO、VIVO的X和R系列竞争，荣耀则是和小米竞争。要说华为目前没有占坑的，可能就是和红米竞争的千元低端机性价比市场了。这一部分主要是靠荣耀数字系列的降价来支撑。
 
-- 潜在竞争对手:
+        - 5G里，在芯片组相关，华为主要的竞争对手是美国的高通。高通在通信业属于解决方案提供商，它不直接生产设备，但是在4G、5G涉及到的芯片组这块，华为最大的竞争对手还是高通。而且由于5G是一个面向物联网的移动通信制式，在5G里会有大量的终端产品，需要使用相应的工业模组。就这部分，目前主流的市场还是华为和高通之争，在这里的竞争甚至要比5G主设备集采这块的市场竞争还要激烈。而这部分市场，也有可能比设备商的市场还要更大一些。
+
+        - 在目前全球运营商的5G组网解决方案之中，诺基亚和爱立信是华为主要的海外市场竞争者，而中兴则是华为主要的国内市场竞争者。在5G目前国内运营商集采份额之中，诺基亚和爱立信被边缘化的程度是非常严重，已经基本失去了和华为竞争的能力。
+
 - 买方分析:
-- 供应方分析
-
+  - ![guke][guke]
+  - 华为手机采取的是差异化策略，用不同的产品服务不同的细分市场。高质量是智能手机的基础，特别对于四十岁以上的消费者来说质量相比性能更重要，在质量过硬的前提下才关注性价比。华为针对这一顾客群推出荣耀系列手机。对于年龄二十岁到四十岁之间的消费者偏爱功能多样、技术先进、外形绚丽、大厂名牌、敢于消费最求潮流的消费习惯，华为对应推出P系列智能手机。
+  <empty/>
+  华为通过广泛的调研了解到消费者明显偏爱苹果的先进技术与三星的大屏幕，小米的高性价比。现在它主要运作2个手机子品牌荣耀系列和P系列，荣耀系列定位在一千元到两千元，可以明显看出荣耀系列主要与小米竞争。P系列定位在四千到五千元之间主打高端市场。这显示华为自信自己做手机的实力，要与市场上的领导者进行激烈的正面竞争想以取代它们的市场地位为目标。这种策略与它一贯强调自主创新，公司的狼性文化相一致。虽然风险很大，可是成功后收益也很高。也正是这种自立不畏强敌的风格，华为才取得了今天的成果。
+- 供应方分析:
+  - 供应商是向企业及其竞争者提供生产经营所需资源的企业或个人，包括原材料、零配件、设备、能源、劳务、资金及其他用品等。华为的核心业务主要包括硬件、通信和消费电子（手机为主）。华为的供应商包括电子、通信、计算机等行业，全球供应商合计149家。其中，软件与服务类供应商数量最多，有21家，半导体设计行业的供应商17家，代工、晶圆制造等生产服务的供应商14家，安防设备等电子装备供应商10家，而主营业务涉及的核心元器件如存储器、连接器、线缆的供应商数量也分别为9家。
+  <empty/>
+  然而，近期华为顶尖供应商——台积电表示将停止向华为提供芯片代加工业务；台积电是全球最大的芯片加工厂，也是最先掌握5mm工艺制式的厂商，在给华为生产完最后一批麒麟9000系列芯片之后，由于“禁售令”的限制不能继续给华为生产芯片，这将让华为几乎完全失去芯片供货。前段时间全球最大的OLED屏幕厂商——三星宣布，将会在9月停止向华为提供显示屏（因为该公司的显示屏使用了部分美国技术和元器件）；同时，三星旗下的三星电子业宣布停止向华为提供存储芯片、内存芯片，因此很多所谓的国产芯片厂商在采用三星颗粒的情况下，同样无法向华为继续供货。
+  <empty/>
+  为了缓解麒麟芯片供货受限的局面，华为购买了大批量的联发科芯片，今年有数款华为手机采用了联发科天玑800芯片，该芯片支持5G网络，性能和华为自主研发的麒麟820芯片相差不大；不过需要注意的是，联发科天玑芯片的ISP算法不够优秀，所以搭载联发科芯片的手机成像质量都不理想。因此，华为现在处于“四面楚歌”的状况。
+## 总结
+- 华为企业在不断发展的过程中存在某种中国企业特有的管理理论，为了深入地了解华为公司，本文对华为公司目前的发展阶段及市场营销策略进行了分析与探讨，希望能够从华为公司的经验与问题中得出结论，对中国企业的发展提供参考与借鉴。
 ## 百科摘录
 - 华为是将研究团队和开发团队完成区分开的，搞研究的人不搞开发，搞开发的人不搞研究。为了区分的彻底，华为甚至将研究和开发团队从地理位置上彻底分开。在华为，研究团队的任务是针对国际上最为前沿的技术进行研究、创新，注重成果的落实，这种落实往往是以专利的形式成为目标。当然，华为还有大量技术没有申请专利，但是，对于华为来讲，成果的落实方式都是类似的。拥有了大量的研究成果之后，华为将这些研究成果摆上“货架”，形成了自己的专利（包括由于技术保密的原因，未公开的成果）库。
 - 华为是一个有战略耐心的公司，所有的创新和尝试，都是在主航道上做出的选择，由战略做出界定。所有创新项目的选择，已经通过战略做出筛选。这个过程，可以用两组数据来说明，据了解，华为2016年研发投入120亿美元，其中30亿美元用于研究创新，2万人，这是一个金钱变知识的过程，这个过程就是把广泛的信息最终变成与华为公司战略相匹配的知识。其中用于确定性开发90亿美元，6万人，这是一个知识变金钱的过程，把与战略相关的知识转化为华为的技术与产品，让华为具有持续的市场竞争力和战略上的领先能力。
-[全栈工程师]( c  "是指掌握多种技能，并能利用多种技能独立完成产品的人。什么是全栈工程师")
-
+  
 <!-- css样式 -->
 <style>
-#123 {color : red !important;}
+strong {color : #7acac1 !important;}
 #logo {max-width : 5%  !important;}
 a { color : #6c9c6c !important;}
-h1,h2,h3,p,li { color: #999 !important;
-font-size : 18 px !important; }
+h1,h2,h3,p,li { 
+color: #999 !important;
+font-size : 18 px !important;
+/* max-width : 90% !important;  */
+}
 body { background-color : #263238 !important;
           font-family : '仓耳今楷03' !important;
           font-size: 18 px !important;
@@ -63,6 +118,9 @@ body { background-color : #263238 !important;
 [3]: ../img/产品.png
 [intraduce]: ../img/公司简介.png
 [sike]: https://baike.baidu.com/item/%E6%80%9D%E7%A7%91/454822?fr=aladdin
+[renkou]: https://pic3.zhimg.com/80/v2-2f8841bd01ca909956a06e028255a81e_720w.webp
+[hongguan]: https://pic2.zhimg.com/80/v2-55366350cd7d1761689e221d761897c1_720w.webp
+[guke]: https://pic1.zhimg.com/80/v2-2a630aea8e90b9e677fc736f86c5ac60_720w.webp
 
 <!-- 注释列表 -->
 [^参考文献]: 参考了如下内容：
