--- a/管理学/组织环境调查-华为.md
+++ b/管理学/组织环境调查-华为.md
@@ -1,5 +1,5 @@
 # 组织环境调查--华为
-## 企业面貌：
+## 企业画像
 - 简介：
   - （百科的简介）华为的愿景与使命是把数字世界带入每个人、每个家庭、每个组织，构建万物互联的智能世界。
   - 华为技术有限公司是一家生产销售通信设备的民营通信科技公司，于1987年正式注册成立，总部位于中国广东省深圳市龙岗区坂田华为基地。华为是全球领先的信息与通信技术（ICT）解决方案供应商，专注于ICT领域，坚持稳健经营、持续创新、开放合作，在电信运营商、企业、终端和云计算等领域构筑了端到端的解决方案优势，为运营商客户、企业客户和消费者提供有竞争力的ICT解决方案、产品和服务，并致力于实现未来信息社会、构建更美好的全联接世界。
@@ -92,6 +92,34 @@
   为了缓解麒麟芯片供货受限的局面，华为购买了大批量的联发科芯片，今年有数款华为手机采用了联发科天玑800芯片，该芯片支持5G网络，性能和华为自主研发的麒麟820芯片相差不大；不过需要注意的是，联发科天玑芯片的ISP算法不够优秀，所以搭载联发科芯片的手机成像质量都不理想。因此，华为现在处于“四面楚歌”的状况。
 ## 总结
 - 华为企业在不断发展的过程中存在某种中国企业特有的管理理论，为了深入地了解华为公司，本文对华为公司目前的发展阶段及市场营销策略进行了分析与探讨，希望能够从华为公司的经验与问题中得出结论，对中国企业的发展提供参考与借鉴。
+## 未来的发展
+- [华为发布《智能世界2030》报告，多维探索未来十年趋势][weilai]
+- 智能世界2030:
+  - 人类活得更健康、更有质量，食物更绿色、更充足，居住的空间更人性化，上班路上不再担心拥堵，生活在宜居的城市，享有可再生的绿色能源，把重复的、危险的工作交给机器，安全放心地享用数字服务等。围绕这些需求，华为提出了八个维度的展望：
+
+  在健康方面，到2030年，通过对公共卫生和医疗健康数据的计算建模，人类将从“治已病”到“治未病”，实现疾病的主动预防；同时借助物联网、AI等技术，治疗方案也将不再千篇一律。
+
+  在饮食方面，到2030年，与环境气候变化影响无关的新生产形态，“垂直农场”将规模应用，普惠绿色饮食；通过3D打印技术，获得符合个人健康需求且口感丰富的人造肉，满足人类营养需求。
+
+  在居住方面，到2030年，人类将在零碳建筑中工作和生活，基于下一代物联网操作系统，实现居家和办公环境的自适应，让人们拥有“懂你”的空间。
+
+  在出行方面，到2030年，有了自动驾驶技术的新能源汽车，让我们拥有专属的移动第三空间；新型的载人飞行器不但能提升紧急救援效率，降低应急物资的输送成本，甚至还将改变人们的通勤方式。
+
+  除了日常的医、食、住、行，华为还探索了城市、能源、企业和数字可信的未来，期待和大家一起翻开2030，探索无限可能。
+- 通信网络2030:
+  - 未来十年，网络联接的对象及边界将不断拓展。到2030年，随着XR、裸眼3D、电子皮肤、电子鼻等技术的成熟，“数字视觉、数字触觉、数字嗅觉”将通过下一代网络，带来身临其境，天涯若比邻的颠覆式体验。与此同时，伴随联接百亿人到千亿物的网络需求变化，网络设计理念也将从“面向人的认知”向“面向机器认知”转变，催生出面向千亿物、海量数据和多级算力基础设施，提供联接服务的算力网络。除此之外，住行合一网络、卫星宽带互联网、工业互联网、认知网络这四种未来网络场景也将逐渐成为现实。
+
+  - 作为智能世界的一部分，通信网络2030将具备立体超宽、确定性体验、智能原生、通信感知融合、安全可信和绿色低碳6大技术特征。华为预测，到2030年，全球联接总量将突破2000亿，与此同时，企业网络接入、家庭宽带接入、个人无线接入突破万兆，迎来一个万兆联接的时代。
+- 计算2030:
+  - 未来十年，数字世界和物理世界将无缝融合，人与机器实现感知、情感的双向交互；人工智能将无所不及，帮助人类获得超越自我的能力，成为科学家的显微镜与望远镜，让我们的认知跨越微小的夸克到广袤的宇宙，千行万业从数字化走向智能化；计算能效将持续提升，走向零碳计算，帮助人类利用数字手段加速实现碳中和目标。
+
+  - 未来计算将面临物理极限的挑战，既要从软件、架构和系统层面去创新，更要产业界共同探索新的计算基础，突破半导体物理层极限，构建智能、绿色、安全的未来计算。华为预测，到2030年，人类将进入YB数据时代，通用算力将增长10倍、人工智能算力将增长500倍。
+- 数字能源2030:
+  - 未来十年，人类将进入数字能源时代，全面推进低碳化、电气化、智能化转型。光伏、风电等新型可再生能源将逐步撼动传统化石能源地位，电力电子技术和数字化技术正深度融合，实现整个能源系统的“比特管理瓦特”，并在“能源云”上实现各种智能化应用。华为预测，到2030年，在能源生产侧，风光新能源成为主力电源之一，可再生能源占全球发电总量比例50%；在能源消费侧，终端电气化率将超过30%，电动汽车占新车销量的比例将超过50%，超过80%的数字基础设施将采用绿能供电。
+- 智能汽车解决方案2030:
+  - 未来十年，电动化+智能化的大潮不可阻挡，ICT技术与汽车产业趋于融合。汽车产业将迎来智能驾驶、智慧空间、智慧服务和智能生产的大发展，华为希望以自身的ICT技术赋能产业智能化，帮助车企造好车。
+
+  - 智能驾驶的终极目标是依托自动驾驶等技术，极大的降低交通事故发生率，给用户提供高效、无缝的出行体验。自动驾驶将率先在高速、园区等封闭道路场景中实现，并逐步覆盖开放道路中如城区在内的全场景。未来，汽车作为全新智慧空间，在ICT技术加持下，人工智能、生物识别、车载光、AR/VR等技术使得座舱呈现出虚实结合的新特征。智能汽车将真正从“灵活的移动空间”成为“虚实融合的智能生活空间”。华为预测，到2030年，中国自动驾驶新车渗透率将高于20%；电动汽车占新车销量比例将超过50%；车载算力将整体将超过5000TOPS；车载单链路传输能力将超过100Gbps。
 ## 百科摘录
 - 华为是将研究团队和开发团队完成区分开的，搞研究的人不搞开发，搞开发的人不搞研究。为了区分的彻底，华为甚至将研究和开发团队从地理位置上彻底分开。在华为，研究团队的任务是针对国际上最为前沿的技术进行研究、创新，注重成果的落实，这种落实往往是以专利的形式成为目标。当然，华为还有大量技术没有申请专利，但是，对于华为来讲，成果的落实方式都是类似的。拥有了大量的研究成果之后，华为将这些研究成果摆上“货架”，形成了自己的专利（包括由于技术保密的原因，未公开的成果）库。
 - 华为是一个有战略耐心的公司，所有的创新和尝试，都是在主航道上做出的选择，由战略做出界定。所有创新项目的选择，已经通过战略做出筛选。这个过程，可以用两组数据来说明，据了解，华为2016年研发投入120亿美元，其中30亿美元用于研究创新，2万人，这是一个金钱变知识的过程，这个过程就是把广泛的信息最终变成与华为公司战略相匹配的知识。其中用于确定性开发90亿美元，6万人，这是一个知识变金钱的过程，把与战略相关的知识转化为华为的技术与产品，让华为具有持续的市场竞争力和战略上的领先能力。
@@ -121,6 +149,7 @@ body { background-color : #263238 !important;
 [renkou]: https://pic3.zhimg.com/80/v2-2f8841bd01ca909956a06e028255a81e_720w.webp
 [hongguan]: https://pic2.zhimg.com/80/v2-55366350cd7d1761689e221d761897c1_720w.webp
 [guke]: https://pic1.zhimg.com/80/v2-2a630aea8e90b9e677fc736f86c5ac60_720w.webp
+[weilai]: https://www.huawei.com/cn/news/2021/9/huawei-releases-intelligent-world-report-2030
 
 <!-- 注释列表 -->
 [^参考文献]: 参考了如下内容：
@@ -129,5 +158,5 @@ https://baijiahao.baidu.com/s?id=1636679461999971706
 https://zhuanlan.zhihu.com/p/134304711
 [^milv]: 幂律法则是资本财富的分配所要遵循的规则。
 幂律就是贫富差异，1%的人掌握了世界50%的财富。市场经济的发展必然会出现财富两极分化，但这恰好就是一个最有活力的社会。
-[百科地址](https://zhuanlan.zhihu.com/p/494696309)
+https://zhuanlan.zhihu.com/p/494696309
 [^haishili]: Hynix 海力士芯片生产商，源于韩国品牌英文缩写"HY"。海力士即原现代内存，2001年更名为海力士。海力士半导体是世界第三大DRAM制造商，也在整个半导体公司中占第九位。 2018年6月，中国反垄断机构启动了对于海力士的反垄断调查。 2018年6月，2018福布斯世界最大上市公司排名发布，海力士排名第200位。
