--- a/管理学/组织环境调查-华为.md
+++ b/管理学/组织环境调查-华为.md
@@ -2,7 +2,7 @@
 ## 企业画像
 - 简介：
   - （百科的简介）华为的愿景与使命是把数字世界带入每个人、每个家庭、每个组织，构建万物互联的智能世界。
-  - 华为技术有限公司是一家生产销售通信设备的民营通信科技公司，于1987年正式注册成立，总部位于中国广东省深圳市龙岗区坂田华为基地。华为是全球领先的信息与通信技术（ICT）解决方案供应商，专注于ICT领域，坚持稳健经营、持续创新、开放合作，在电信运营商、企业、终端和云计算等领域构筑了端到端的解决方案优势，为运营商客户、企业客户和消费者提供有竞争力的ICT解决方案、产品和服务，并致力于实现未来信息社会、构建更美好的全联接世界。
+  华为技术有限公司是一家生产销售通信设备的民营通信科技公司，于1987年正式注册成立，总部位于中国广东省深圳市龙岗区坂田华为基地。华为是全球领先的信息与通信技术（ICT）解决方案供应商，专注于ICT领域，坚持稳健经营、持续创新、开放合作，在电信运营商、企业、终端和云计算等领域构筑了端到端的解决方案优势，为运营商客户、企业客户和消费者提供有竞争力的ICT解决方案、产品和服务，并致力于实现未来信息社会、构建更美好的全联接世界。
   - （官网的简介）华为创立于1987年，是全球领先的ICT（信息与通信）基础设施和智能终端提供商。目前华为约有19.5万员工，业务遍及170多个国家和地区，服务全球30多亿人口。
   华为致力于把数字世界带入每个人、每个家庭、每个组织，构建万物互联的智能世界：让无处不在的联接，成为人人平等的权利，成为智能世界的前提和基础；为世界提供多样性算力，让云无处不在，让智能无所不及；所有的行业和组织，因强大的数字平台而变得敏捷、高效、生机勃勃；通过AI重新定义体验，让消费者在家居、出行、办公、影音娱乐、运动健康等全场景获得极致的个性化智慧体验。
 - 官网[点击转跳][1]
@@ -126,10 +126,10 @@
   
 <!-- css样式 -->
 <style>
-strong {color : #7acac1 !important;}
+strong,h2 {color : #7acac1 !important;}
 #logo {max-width : 5%  !important;}
 a { color : #6c9c6c !important;}
-h1,h2,h3,p,li { 
+h1,h3,p,li { 
 color: #999 !important;
 font-size : 18 px !important;
 /* max-width : 90% !important;  */
