--- a/高数/不定积分.Markdown
+++ b/高数/不定积分.Markdown
@@ -15,26 +15,48 @@
 ## 积分表⭐
 |导函数|原函数|
 |-------|------|
-|$\int 0 dx $ |$C$  
-|$\int{\frac{1}{x}dx}$  | $\ln{\lvert x \rvert} $
-|$\int{\sec^{2}{x}dx}$ | $ \tan{x}+C$
-|$\int{\csc^{2}{x}dx}$ | $ -\cot{x}+C$
+|$ 0  $ |$C$  
+|$\frac{1}{x}$  | $\ln{\lvert x \rvert} $
+|$\sec^{2}{x}$ | $ \tan{x}$
+|$\csc^{2}{x}$ | $ -\cot{x}$
+|$\sec{x}      $ | $\lvert\sec{t}+\tan{t}\rvert$
+|正……                           | +……
+|余……                           |-……
 |$\cdots$
 
-
+## 第一换元积分法（凑）
+- $ \int{f\big(\varphi  (x)\big)\varphi'(x)dx}=\int{f\big(\varphi  (x)\big)d(\varphi(x))}=F(\varphi(x))+C$
+- 将积分变量由x换为一个整体部分u，再对u进行积分，我愿称之为**整体法**
+- 例题
+  1. $\int{2\cos{2x}dx}=\int{\cos{2x}d{(2x)}=\sin{(2x)}}$
+  2. $$\int{\frac{1}{3+2x}dx}=\frac{1}{2}\int{\frac{2}{3+2x}dx}=\frac{1}{2}\int{\frac{1}{3+2x}d{2x}}=\frac{1}{2}\int{\frac{1}{3+2x}d{（2x+3）}=\frac{1}{2\ln{(\lvert 2x+3\rvert)}}}+C$$
+  3. $\int{2xe^{x^2}dx}= \int{e^{x^{2}}d{(x^{2})}}$
+### 技巧：
+  - ⭐d 的里面可以任意加减常数
+  - 对于高次三角函数偶次幂则用半角公式，奇次幂则拆出一个用本方法
+## 第二类换元积分法
+- 作用：去根号
+- 令$x=\varphi(t)$或者写成$t=g(x)$用t换掉根号部分
+- 再把t换回x
+- 例题 ：
+  1. $\int{\sqrt{a^{2}-x^{2}}dx}$
+  令$x=a\sin{t},则\int{\sqrt{a^{2}-a^{2}\sin{t}^{2}}d{(a\sin{t})}}=\int{\sqrt{a^{2}\cos^{2}{t} }d{(a\sin{t})}}=\cdots$ 
+  2. $\int{\frac{dx}{\sqrt{x^{2}+a^{2}}}}$(a > 0)
+  3. $\int{\frac{dx}{\sqrt{x^{2}-a^{2}}}}$(a > 0)
+### 技巧：
+- $\sqrt{a^2-x^2}$令$x=a\sin{t}$
+- $\sqrt{x^{2}-a^{2}}$令$x=a\sec{t}$
+- $\sqrt{x^{2}-a^{2}}$令$x=\tan{t}$
 <!-- css样式 -->
 <style>
 strong,h2,h3,h4 {color : #7acac1 !important;}
-#logo {max-width : 5%  !important;}
 a { color : #6c9c6c !important;}
 h1,p,li { 
 color: #999 !important;
 font-size : 18 px !important;
-/* max-width : 90% !important;  */
 }
 h1,h2,h3,h4,li,a,strong,font {
   font-family : '仓耳今楷03' !important;
-
 }
 body { background-color : #263238 !important;
           font-size: 18 px !important;
