--- a/高数/不定积分.md
+++ b/高数/不定积分.md
@@ -29,7 +29,7 @@
 - 将积分变量由x换为一个整体部分u，再对u进行积分，我愿称之为**整体法**
 - 例题
   1. $\int{2\cos{2x}dx}=\int{\cos{2x}d{(2x)}=\sin{(2x)}}$
-  2. $$\int{\frac{1}{3+2x}dx}=\frac{1}{2}\int{\frac{2}{3+2x}dx}=\frac{1}{2}\int{\frac{1}{3+2x}d{2x}}=\frac{1}{2}\int{\frac{1}{3+2x}d{（2x+3）}=\frac{1}{2\ln{(\lvert 2x+3\rvert)}}}+C$$
+  2. $\int{\frac{1}{3+2x}dx}=\frac{1}{2}\int{\frac{2}{3+2x}dx}=\frac{1}{2}\int{\frac{1}{3+2x}d{2x}}=\frac{1}{2}\int{\frac{1}{3+2x}d{（2x+3）}=\frac{1}{2\ln{(\lvert 2x+3\rvert)}}}+C$
   3. $\int{2xe^{x^2}dx}= \int{e^{x^{2}}d{(x^{2})}}$
 ### 技巧：
   - ⭐d 的里面可以任意加减常数
@@ -48,7 +48,7 @@
 - $\sqrt{x^{2}-a^{2}}$令$x=a\sec{t}$
 - $\sqrt{x^{2}-a^{2}}$令$x=\tan{t}$
 <!-- css样式 -->
-<style>
+<!-- <style>
 strong,h2,h3,h4 {color : #7acac1 !important;}
 a { color : #6c9c6c !important;}
 h1,p,li { 
@@ -61,4 +61,4 @@ h1,h2,h3,h4,li,a,strong,font {
 body { background-color : #263238 !important;
           font-size: 18 px !important;
         }
-</style>
+</style> -->
