--- a/管理学/组织环境调查-华为.md
+++ b/管理学/组织环境调查-华为.md
@@ -144,7 +144,7 @@ body { background-color : #263238 !important;
 [1]: https://www.huawei.com/cn/
 [2]: https://s.aigei.com/prevfiles/3ce2ea51c9f04a95a948bc05557681e3.png?e=1735488000&token=P7S2Xpzfz11vAkASLTkfHN7Fw-oOZBecqeJaxypL:LeBoXlxer6N7vrUNi9UKiHfowOQ=
 [3]: ../img/产品.png
-[intraduce]: ../img/公司简介.png
+[intraduce]: \../img/公司简介.png
 [sike]: https://baike.baidu.com/item/%E6%80%9D%E7%A7%91/454822?fr=aladdin
 [renkou]: https://pic3.zhimg.com/80/v2-2f8841bd01ca909956a06e028255a81e_720w.webp
 [hongguan]: https://pic2.zhimg.com/80/v2-55366350cd7d1761689e221d761897c1_720w.webp
