--- a/高数/不定积分.md
+++ b/高数/不定积分.md
@@ -48,7 +48,7 @@
 - $\sqrt{x^{2}-a^{2}}$令$x=a\sec{t}$
 - $\sqrt{x^{2}-a^{2}}$令$x=\tan{t}$
 <!-- css样式 -->
-<!-- <style>
+<style>
 strong,h2,h3,h4 {color : #7acac1 !important;}
 a { color : #6c9c6c !important;}
 h1,p,li { 
@@ -61,4 +61,4 @@ h1,h2,h3,h4,li,a,strong,font {
 body { background-color : #263238 !important;
           font-size: 18 px !important;
         }
-</style> -->
+</style>
